# project_wifi_esp32_ver_1_0

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.c  component.mk  handler_data.c  handler_data.h  mqtt_lib.c  mqtt_lib.h  uart_lib.c  uart_lib.h
wifi/ap/: CMakeLists.txt  wifi_ap.c  wifi_ap.h
wifi/smart_config/: CMakeLists.txt  wifi_smart_config.c  wifi_smart_config.h
wifi/sta/: CMakeLists.txt  wifi_sta.c  wifi_sta.h
